--- a/app/assets/styles/modules/_navigation.css
+++ b/app/assets/styles/modules/_navigation.css
@@ -1,3 +1,7 @@
+.site-header {
+	width:100%;
+}
+
 .logo a {
 	display:block;
 	width:100%;
